2011-07-13  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/encoding/euc-jp.scm (encoding euc-jp): added euc-jp codec.

	* src/null.stub: modified get-bytevector-* series for socket to read
	bytes from textual ports.

	* ext/regex/regex.c: fixed char_property matching, it always failed when
	it reached last.

2011-07-12  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/uri.scm (rfc uri): made uri record use keyword to
	initialize values.

	* sitelib/sagittarius/control.scm (sagittarius control): introduced
	let-keywords and let-keywords*.

2011-07-11  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/slib/queue.scm (slib queue): added slib queue.

2011-07-10  Takashi Kato  <ktakashi@ymail.com>

	* src/reader.c (read): added #!/... style hash bang line reader.

	* boot/compiler.scm (pass1/define): added (define <var>) form to
	conform R6RS.

2011-07-09  Takashi Kato  <ktakashi@ymail.com>

	* src/number.c (Sg_NumberToString): fixed displaying infinite complex
	number.

2011-07-08  Takashi Kato  <ktakashi@ymail.com>

	* src/cache.c (compiled cache): introduced compiled cache mechanism.
	fixed cache structure.

	* src/extlib.stub (sagittarius): added read-directory and clean-cache.

2011-06-30  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/encoding/sjis.scm (encoding sjis): added sjis-codec.

2011-06-29  Takashi Kato  <ktakashi@ymail.com>

	* src/codec.h: prepared for custom codec.

2011-06-26  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/base64.scm (rfc base64): changed to use define-optional
	instead of case-lambda.

	* sitelib/rfc/quoted-printable.scm (rfc quoted-printable): introduced
	(rfc quoted-printable) library.

2011-06-23  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/uri.scm (rfc uri): added RFC3986 uttility library.

	* src/null.stub (null): fixed get-line method.

	* src/library.c (encode_string): added encoding method to convert
	library name to path.

	* ext/regex/regex.c: fixed some bugs.
